finish the modification of zone management part and pass the test