@@ -9,9 +9,12 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
+
+import static java.util.List.of;
 
 @RestController
 @RequestMapping("/api")
@@ -21,7 +24,7 @@ public class CityAPIImpl  implements CityAPI{
     private final CityService cityService;
     @Override
     @PostMapping("/getCityById")
-    public City getCityById(Integer id) {
+    public City getCityById(@RequestBody Integer id) {
         return cityService.getById(id);
     }
 
@@ -33,7 +36,6 @@ public class CityAPIImpl  implements CityAPI{
                 .eq("province", location.get("province"))
                 .eq("name", location.get("city"))
                 .list();
-        System.out.println(administratorList);
         if (administratorList.isEmpty())
             result = null;
         else
@@ -43,7 +45,7 @@ public class CityAPIImpl  implements CityAPI{
 
     @Override
     @PostMapping("/getCitiesByProvince")
-    public List<Integer> getCitiesIdByProvince(String province) {
+    public List<Integer> getCitiesIdByProvince(@RequestBody String province) {
         return cityService.query()
                 .eq("province", province)
                 .list()
@@ -53,16 +55,18 @@ public class CityAPIImpl  implements CityAPI{
     }
 
     @Override
-    @PostMapping("/api/getCitiesSameProvince")
-    public List<Integer> getCitiesSameProvince(Integer cityId) {
+    @PostMapping("/getCitiesSameProvince")
+    public List<Integer> getCitiesSameProvince(@RequestBody Integer cityId) {
         City city = cityService.getById(cityId);
+        if(city == null)
+            return null;
         return cityService.query()
                 .eq("province", city.getProvince())
-                .ne("city_id", cityId)
+                .ne("id", cityId)
                 .list()
                 .stream()
                 .map(City::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
